# SQLSensei

./: .env.example  .gitignore  Dockerfile  inference.py  openenv.yaml  pyproject.toml
server/: __init__.py  app.py
sql_debug_env/: README.md  inference.py  pyproject.toml
sql_debug_env/server/: graders.py  sql_debug_env_environment.py
